# rag-failure-mode-lab

./: .gitignore  README.md  config.json  conftest.py  pyproject.toml
docs/: ARCHITECTURE.md  METRICS.md  RUN_INSTRUCTIONS.md
docs/datasets/: erp_queries.jsonl
eval/: COMPARISON.md  comparison.json  stress_results.json
scripts/: build_dataset.py  check_prose.py  run_comparative_report.py
shared/: __init__.py  determinism.py  obs.py
src/: __init__.py  cli.py
src/abstraction/: __init__.py  bm25_retriever.py  embedding_retriever.py  generator_interface.py  hybrid_retriever.py  mock_generator.py  retriever_interface.py  template_generator.py
src/core_logic/: __init__.py  rag_pipeline.py
src/evaluation/: __init__.py  benchmark.py  failure_taxonomy.py  metrics.py  report_generator.py  stress_test_runner.py
src/input_layer/: __init__.py  dataset_loader.py  schema.py  stress_taxonomy.py  validation.py
src/logging_layer/: __init__.py  debug_hooks.py  event_log.py  event_schema.py
tests/: test_benchmark.py  test_cli.py  test_dataset_loader.py  test_determinism_contract.py  test_e2e_integration.py  test_failure_taxonomy.py  test_generators.py  test_input_validation.py  test_logging_layer.py  test_metrics.py  test_project_structure.py  test_rag_pipeline.py  test_retriever_bm25.py  test_retriever_embedding.py  test_retriever_hybrid.py  test_retriever_interface.py  test_stress_and_report.py
tests/fixtures/: erp_corpus.jsonl
