[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p2-rag"
version = "0.1.0"
description = "RAG Evaluation & Failure Mode Lab — deterministic, offline, synthetic-data RAG benchmarking"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "scikit-learn>=1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
p2-rag = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
